--- a/src/book.adoc
+++ b/src/book.adoc
@@ -7,4 +7,6 @@ Flávio Luiz Schiavoni, Beraldo Leal
 
 include::./chapters/00-urls.adoc[]
 
-include::./chapters/01-introducao.adoc[]
+include::./chapters/01-preface.adoc[]
+
+include::./chapters/02-introduction.adoc[]
