--- a/src/book.adoc
+++ b/src/book.adoc
@@ -8,6 +8,25 @@
 :imagesdir: ../assets/images
 :front-cover-image: image:cover.pdf[Front Cover,1050,1600]
 
+== LICENSE
+
+This copy is licensed under the _Creative Commons Attribution-Share Alike 4.0
+International_ license. You are free:
+
+ * *to share*: to copy, distribute and transmit the work;
+ * *to remix*: to adapt the work
+
+Under the following conditions:
+
+ * *attribution*: You must give appropriate credit, provide a link to the
+license, and indicate if changes were made. You may do so in any reasonable
+manner, but not in any way that suggests the licensor endorses you or your
+use.
+
+ * *share alike*: If you alter, transform, or build upon this work, you may
+distribute the resulting work only under the same or similar license to this
+one.
+
 include::./chapters/00-urls.adoc[]
 
 include::./chapters/01-preface.adoc[]
